nic validation,findByFileName & findAll